--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,15 @@ logging.level.org.hibernate.stat=debug
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
+
+
+# second level cache - Ehcache
+# 1: enable second level cache
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+#2: specify the caching framework - EhCache
+spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+#3: only cache what i tell to cache
+spring.jpa.properties.javax.persistence.sharedCache.Mode=ENABLE_SELECTIVE
+
+logging.level.net.sf.cache = debug
+#4: what data to cache
